# neoscutils

./: LICENSE  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  neosc-appselect.1  neosc-appselect.c  neosc-shell.1  neosc-shell.c
